--- a/angular.json
+++ b/angular.json
@@ -5,11 +5,7 @@
   "projects": {
     "angular-ecommerce": {
       "projectType": "application",
-      "schematics": {
-        "@schematics/angular:application": {
-          "strict": true
-        }
-      },
+      "schematics": {},
       "root": "",
       "sourceRoot": "src",
       "prefix": "app",
@@ -27,7 +23,9 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/@fortawesome/fontawesome-free/css/all.min.css"
             ],
             "scripts": []
           },
@@ -101,6 +99,5 @@
         }
       }
     }
-  },
-  "defaultProject": "angular-ecommerce"
+  }
 }
